# VibePrompter

./: .env.example  .gitignore  PRIVACY.md  Package.appxmanifest  README.md  package-lock.json  package.json
.claude/: ralph-loop.local.md
docs/superpowers/specs/: 2026-05-14-ui-polish.md  2026-06-17-tweak-history-threading-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/: ralph-loop.local.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/app/: cancel.rs  logging.rs  mod.rs  setup.rs  state.rs
src-tauri/src/commands/: catalog.rs  connections.rs  diagnostics.rs  history.rs  mod.rs  overlay.rs  settings.rs  shortcuts.rs
src-tauri/src/events/: bus.rs  mod.rs  types.rs
src-tauri/src/models/: analytics.rs  history.rs  mod.rs  prompt_mode.rs  provider.rs  provider_connection.rs  settings.rs  shortcut.rs
src-tauri/src/overlay/: mod.rs
src-tauri/src/platform/: mod.rs  uia.rs  windows_hook.rs
src-tauri/src/providers/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/services/: analytics_service.rs  catalog_service.rs  connection_service.rs  history_service.rs  mod.rs  pricing.rs  prompt_service.rs  prompt_template.rs  settings_service.rs
src-tauri/src/shortcuts/: mod.rs
src-tauri/src/storage/: mod.rs  pool.rs
src-tauri/src/storage/migrations/: 0001_initial.sql  0002_connection_pricing.sql  0002_history_threads.sql  0002_seed.sql  0003_provider_connections.sql  0004_history_usage.sql  0005_drop_dead_settings.sql  0006_connection_headers.sql  0007_connection_last_used.sql  0008_mode_tags.sql  0009_connection_notes.sql  0010_swap_overlay_palette_shortcuts.sql  0011_prompt_mode_enabled.sql
src-tauri/src/storage/repositories/: analytics_repo.rs  connection_repo.rs  history_repo.rs  mod.rs  mode_repo.rs  provider_repo.rs  settings_repo.rs  shortcut_repo.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/utils/: error.rs
src/app/: App.tsx  providers.tsx  router.tsx
src/features/home/: index.ts
src/features/home/pages/: HomePage.tsx  StartupPage.tsx  index.ts
src/features/home/ui/: HowToUseCard.tsx
src/features/onboarding/ui/: SetupScreen.tsx  StepIndicator.tsx
src/features/overlay-hud/: index.ts
src/features/overlay-hud/ui/: ModeHud.tsx
src/features/refine-overlay/: index.ts
src/features/refine-overlay/ui/: RefineOverlay.tsx
src/features/settings/application/: settings.query.ts
src/features/settings/domain/: types.ts
src/features/settings/ui/: SettingsWindow.tsx  settingsIndex.ts
src/features/settings/ui/panels/: AboutPanel.tsx  AdvancedPanel.tsx  AppearancePanel.tsx  GeneralPanel.tsx  HistoryPanel.tsx  ModesPanel.tsx  ProvidersPanel.tsx  ShortcutsPanel.tsx
src/features/settings/ui/panels/providers/: ConnectionEditor.tsx
src/features/tray/infrastructure/: trayApi.ts
src/shared/lib/: index.ts  providerLinks.ts  shortcuts.ts
src/shared/styles/: tokens.css
src/shared/ui/: AppIcon.tsx  PhButton.tsx  PhInput.tsx  ProviderKeyHint.tsx  Toggle.tsx  WindowTitlebar.tsx  index.ts
src/shared/ui/changelog/: Changelog.tsx
src/shared/ui/cheat-sheet/: CheatSheet.tsx
src/shared/ui/command-palette/: CommandPalette.tsx
src/shared/ui/guide/: HowItWorks.tsx
src/shared/ui/toast/: ToastProvider.tsx
